--- a/style.css
+++ b/style.css
@@ -11,28 +11,25 @@ body nav
     	width : 16%; /*largeur */
 }
 
- body nav li
+body nav li
 {
 	font-size: 0.9em;
 	list-style: none; /*enlève les points des listes*/
     flex-direction: column;
     display : block;
     align-items: flex-start; /* alignement a gauche */
-    padding-top: 7.5%; /* espacement des liens en haut*/
-    padding-bottom: 7.5%;
-    padding-left: 20%; 
+    padding-top: 9%; /* espacement des liens en haut*/
+    padding-bottom: 9%;
+    padding-left: 10%; 
 }
 
-body nav li img{
-	float : left;
-	height:10%;
-	width:10%;
-}
 
-body nav a
+
+body nav li a
 {
 	color : #E8E8EB;
 	text-decoration: none; /* enlève le soulignement*/
+	padding-left: 5% /* eloigne le texte des icons*/
 
 }
 
@@ -41,15 +38,9 @@ body nav li:hover /*lorsque qu'on passe la souris sur le lien*/
 	background-color: #3C3B53;
 }
 
-
-.test
+.en_cours 
 {
-	top: 0%;
-}
-
-.en_cours /*lorsque le lien est actif*/
-{
-	background: linear-gradient(90deg, #A3A0FB 2%, #3C3B53 2%);
+	background: linear-gradient(90deg, #A3A0FB 2%, #3C3B53 2%); /* modifie la couleur de l'arriere plan lorsque le lien est actif*/
 }
 
 body header
@@ -72,114 +63,4 @@ body header h1
 	 height: 8.5%;
 	color : #FFFFFF;
 	background-color: #3C3B53;
-
-}
-
-#top li{
-	display: inline;
-	;
-	font-size: 1em;
-	color: #444444;
-    
-
-    padding-bottom: 10px;
-    border-bottom: 1px solid #000000;
-
-	
-}
-#top em{
-	text-decoration: none;
-	display: inline;
-	padding: 10px 10px 14px 10px;
-    width:auto;
-    float: left;
-	font-size: 1em;
-	color: #747474;
-    
-
-
-
-	
-}
-#top{
-	text-align: right;
-    position: fixed;
-    	left : 16%;
-    	bottom: 95%;
-    	top : 0%;
-    	width : 84%; /*largeur */
-    	border-bottom:  solid 4px #aaaaaa;
-
-
-}
-#top a{
-	color : #dddddd;
-	text-decoration: none;
-	padding: 10px 10px 14px 10px;
-        width:auto;
-        float: right;
-
-
-
-
-
-}
-#top a:hover /*lorsque qu'on passe la souris sur le lien*/
-{
-	background-color: #524f82;
-	color: #FFFFFF;
-	border-left:  solid 3px #aaaaaa;
-}
-#top em:hover{
-	color: #000000;
-	background-color: #dddddd;
-	border-left:  solid 3px #aaaaaa;
-}
-#top em{
-	text-decoration: none;
-	display: inline;
-	padding: 10px 10px 14px 10px;
-    width:auto;
-    float: left;
-	font-size: 1em;
-	color: #747474;
-    
-
-
-
-	
-}
-#top{
-	text-align: right;
-    position: fixed;
-    	left : 16%;
-    	bottom: 95%;
-    	top : 0%;
-    	width : 84%; /*largeur */
-    	border-bottom:  solid 4px #aaaaaa;
-
-
-}
-#top a{
-	color : #dddddd;
-	text-decoration: none;
-	padding: 10px 10px 14px 10px;
-        width:auto;
-        float: right;
-
-
-
-
-
-}
-#top a:hover /*lorsque qu'on passe la souris sur le lien*/
-{
-	background-color: #524f82;
-	color: #FFFFFF;
-	border-left:  solid 3px #aaaaaa;
-}
-#top em:hover{
-	color: #000000;
-	background-color: #dddddd;
-	border-left:  solid 3px #aaaaaa;
 }
