--- a/style.css
+++ b/style.css
@@ -113,16 +113,13 @@ body header h1
 {
 	background-color: #524f82;
 	color: #FFFFFF;
-
-	height: 40px;
-
+	border-left:  solid 3px #aaaaaa;
 
 }
 #top-bar em:hover{
 	color: #000000;
 	background-color: #dddddd;
 	border-left:  solid 3px #aaaaaa;
-	height: 55px;
 }
 
 
