--- a/CSS/style-messagerie.css
+++ b/CSS/style-messagerie.css
@@ -23,10 +23,11 @@ img {
 	padding: 0% 5% 0% 5%; 
 	z-index: 1;
 	height: 100%;
-
-
+	overflow: auto;
 
 }
+
+
 .head-section{
 	padding-bottom: 15px;
 	background-color: white;
