--- a/CSS/style-assistance.css
+++ b/CSS/style-assistance.css
@@ -2,8 +2,30 @@ body {
 	background-color: #F0F0F7;
 }
 
+
+h2
+{
+	vertical-align: middle;
+	margin-top: 5%;
+	margin-left: 50%;
+	color : #3C3B53;
+	font-size : 2.5em;
+}
+
+#faq
+{
+	margin-left:17%;
+}
+
 #formulaire_contact
 {
-	margin-left : 50%;
-	margin-top: 7%;
+	margin-left : 17%;
+	margin-top : 7%;
+	width : 40%;
+	background-color: grey;
+}
+
+#barre_contact
+{
+	margin-left:70%;
 }
