--- a/CSS/style-assistance.css
+++ b/CSS/style-assistance.css
@@ -1,31 +1,78 @@
-body {
-	background-color: #F0F0F7;
+#contenuAssistance
+{
+	position : absolute;
+	margin-left:16%;
+	margin-top : 3%;
+	width:84%;
 }
 
 
-h2
+#contenuAssistance h2
+{
+	display: block;
+	margin-top: 1%;
+	margin-bottom: 0.5%;
+	text-align: center;
+	height:20%;
+}
+
+#contenuAssistance h2 + p
+{
+	text-align: center;
+	margin-bottom: 1.2%;
+}
+
+#contenuAssistance p a 
+{
+	font-size:2vw;
+	text-decoration: none;
+	color: #A5A4BF;
+	background-color: #3C3B53;
+	text-align: center;
+	padding-right:1.2%;
+	padding-left: 1.2%;
+	margin-left: 39%;
+	border: 2px solid #A5A4BF;
+	transition-duration: 0.1s;
+}
+
+hr 
+{
+	overflow: visible;
+	color: #3C3B53;
+	background-color:#3C3B53;
+	size:1px;
+	height: 1px;
+}
+
+#contenuAssistance #mail 
+{
+ float: left;
+ text-align: center;
+ width: 40%;
+ display: block;
+ position: relative;
+ margin-left:3%;
+ margin-top: 1%;
+}
+
+#contenuAssistance #contact 
+{
+ display: block;
+ position: relative;
+ width: 40%;
+ margin-left:60%;
+ margin-top: 2%;
+}
+
+#contenuAssistance #contact ul li
+{
+	list-style: none;
+	padding-top: 4%;
+	padding-bottom: 4%;
+}
+
+#contenuAssistance #contact ul li i	
 {
 	vertical-align: middle;
-	margin-top: 5%;
-	margin-left: 50%;
-	color : #3C3B53;
-	font-size : 2.5em;
-}
-
-#faq
-{
-	margin-left:17%;
-}
-
-#formulaire_contact
-{
-	margin-left : 17%;
-	margin-top : 7%;
-	width : 40%;
-	background-color: grey;
-}
-
-#barre_contact
-{
-	margin-left:70%;
 }
