--- a/CSS/style-assistance.css
+++ b/CSS/style-assistance.css
@@ -4,109 +4,118 @@
 	margin-left:16%;
 	margin-top : 3%;
 	width:84%;
+	height: 100%;
+	background-color:#F0F0F7;
 }
-
 
 #contenuAssistance h2
 {
-	display: block;
-	margin-top: 1%;
-	margin-bottom: 0.5%;
-	text-align: center;
-	height:20%;
+	margin-left: 3%;
+	margin-top: 2%;
+	margin-bottom: 1.5%;
+	color: #43425D;
+	opacity: 1;
+	
 }
 
-#contenuAssistance h2 + p
-{
-	text-align: center;
-	margin-bottom: 1.2%;
-}
-
-#contenuAssistance p a 
-{
-	font-size:2vw;
-	text-decoration: none;
-	color: #A5A4BF;
-	background-color: #3C3B53;
-	text-align: center;
-	padding-right:1.2%;
-	padding-left: 1.2%;
-	margin-left: 39%;
-	border: 2px solid #A5A4BF;
-	transition-duration: 0.1s;
-}
-
-hr 
-{
-	overflow: visible;
-	color: #3C3B53;
-	background-color:#3C3B53;
-	size:1px;
-	height: 1px;
-}
 
 #contenuAssistance #mail 
 {
- float: left;	
- width: 40%;
- display: block;
- position: relative;
- margin-left:3%;
- margin-top: 1%;
-}
+	background-color: #FFFFFF;
+	 float: left;	
+	 width: 50%;
+	 display: block;
+	 position: relative;
+	 margin-left:3%;
+}	
+
 #contenuAssistance #mail h3
 {
-	text-align: center;
+	margin-left: 3.5%;
+	margin-top: 3.5%;
+	color:#4D4F5C;
 }
 
-#contenuAssistance #mail p
+#contenuAssistance #mail label
 {
+	color: #43425D;
+	margin-left: 3.5%;	
 	font-weight: bold;
-	font-size: 1.1vw;
+	display : inline-block;
+	width:7.5%;
 }
 
-#contenuAssistance #mail p input
+#contenuAssistance #mail input
 {
-	width:100%;
-	resize: none;
-	box-sizing: border-box;
-	border-radius: 20px;
-	padding-left : 5px;
+	display:inline-block;
+	border: 1px solid #E8E9EC;
+	border-radius: 4px;
+	opacity: 1;	
+	margin-left: 10%;
+	width: 70%;
+	height: 40px;
+	padding-left: 2%;
+	margin-bottom: 1%;
 }
 
-#contenuAssistance #mail p textarea
+.dessous
 {
-	width : 100%;
-	height:200px;
-	padding: 12px 20px;
- 	box-sizing: border-box;
- 	border-radius: 4px;
- 	resize: none;
+	color : #808495;
+	margin-left: 21%;
+	margin-bottom: 6%;
 }
 
 
-#contenuAssistance #mail p span input
+#contenuAssistance #mail textarea
 {
-	width : 40%;
+	display:inline-block;
+	vertical-align: middle;
+	border: 1px solid #CECFD0;
+	border-radius: 5px;
+	margin-left: 10%;
+	width : 72%;
+	height: 250px;
+	resize:none;
+}
+
+#contenuAssistance #mail textarea::placeholder
+{
+	padding-left: 2%;
+	padding-top: 2%;
+}
+
+#contenuAssistance #mail span input
+{
+	margin-top:5%;
+	width : 30%;
+	height: 50px;
 	display: block;
+	background-color: #3B86FF;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 #contenuAssistance #contact 
 {
+	background-color: #FFFFFF;
  display: block;
  position: relative;
  width: 40%;
- margin-left:60%;
+ margin-left: 57%;
  margin-top: 2%;
+}
+
+#contenuAssistance #contact h3
+{
+
 }
 
 #contenuAssistance #contact ul li
 {
 	list-style: none;
-	padding-top: 4.3%;
-	padding-bottom: 4.3%;
+	padding-left: 3%;
+	padding-top: 5%;
+	padding-bottom: 5%;
 }
 
 #contenuAssistance #contact ul li i	
