--- a/CSS/style-assistance.css
+++ b/CSS/style-assistance.css
@@ -15,6 +15,7 @@
 	margin-bottom: 1.5%;
 	color: #43425D;
 	opacity: 1;
+	font-size: 1.4vw;
 	
 }
 
@@ -43,6 +44,7 @@
 	font-weight: bold;
 	display : inline-block;
 	width:7.5%;
+	font-size: 1.1vw;
 }
 
 #contenuAssistance #mail input
@@ -63,6 +65,7 @@
 	color : #808495;
 	margin-left: 21%;
 	margin-bottom: 6%;
+	font-size: 0.9vw;
 }
 
 
@@ -76,10 +79,6 @@
 	width : 72%;
 	height: 250px;
 	resize:none;
-}
-
-#contenuAssistance #mail textarea::placeholder
-{
 	padding-left: 2%;
 	padding-top: 2%;
 }
@@ -88,11 +87,13 @@
 {
 	margin-top:5%;
 	width : 30%;
-	height: 50px;
+	height: 40px;
 	display: block;
 	background-color: #3B86FF;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 5%;
+	color : #E8E8D4;
 }
 
 #contenuAssistance #contact 
@@ -102,12 +103,14 @@
  position: relative;
  width: 40%;
  margin-left: 57%;
- margin-top: 2%;
+ padding-bottom: 3.1%;
 }
 
 #contenuAssistance #contact h3
 {
-
+	padding-left: 3.5%;
+	padding-top: 3.5%;
+	color:#4D4F5C;
 }
 
 #contenuAssistance #contact ul li
@@ -116,9 +119,22 @@
 	padding-left: 3%;
 	padding-top: 5%;
 	padding-bottom: 5%;
+
 }
 
 #contenuAssistance #contact ul li i	
 {
 	vertical-align: middle;
+	padding-right: 5%;
+}
+
+#contenuAssistance #contact ul a
+{
+	text-decoration: none;
+	color : black;
+}
+
+#contenuAssistance #contact ul a
+{
+	background-color: black;
 }
