--- a/CSS/style-connect.css
+++ b/CSS/style-connect.css
@@ -3,6 +3,7 @@
 
 @font-face {
   font-family: 'Source Sans Pro', sans-serif;
+  src: url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
 }
 /*
 @font-face {
