normalement register est finie

--- a/CSS/style-connect.css
+++ b/CSS/style-connect.css
@@ -2,8 +2,7 @@
 // POLICES /*/
 
 @font-face {
-  font-family: 'Source Sans Pro', sans-serif;
-  src: url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
+  font-family: 'Source Sans Pro';
 }
 /*
 @font-face {
