--- a/CSS/faq.css
+++ b/CSS/faq.css
@@ -1,19 +1,27 @@
+body{
+	background-color: #F0F0F7		;
+}
+h2
+{
+	margin-left: 19%;
+	margin-top : 6%;
+}
 .faq
 {
-	margin-top: 10%;
-	margin-left: 20%;
-	width: 50%;
+	margin-top: 2%;
+	margin-left: 19%;
+	width: 77.5%;
 	height: 100%;	
+	background-color: #FFFF;
 }
 
 .faq .question 
 {
 	padding : 1%;
 	position: relative; 
-	border : solid 1px;
-	border-radius: 5% 0%;
-	background-color: #D0D0CE; 	
 	list-style: none;
+	padding-top: 1%;
+	padding-bottom: 3%;
 }
 .faq .question i
 {
@@ -31,8 +39,15 @@
 
 .faq .question:hover
 {
-	background-color: #A9AAAF;
+	background-color: #43425D;
 }
+
+.faq .question:hover a
+{
+	color : #E8E8EB;
+	transition: 0s;
+}
+
 
 .faq .question:hover .reponse
 {
@@ -49,5 +64,6 @@
 	height:0;
 	transform : scaleY(0); /* transform permet de modifier la taille d'un élément html*/
 	transition: transform 0.3s ease; /*type de transition voulue*/
+	color:#E8E8EB;
 }
 
