--- a/CSS/style-assistance.css
+++ b/CSS/style-assistance.css
@@ -107,7 +107,8 @@
 #contenuAssistance #contact h3
 {
 	padding-left: 3.5%;
-	padding-top: 3.5%;
+	padding-top: 2.5%;
+	padding-bottom: 2%;
 	color:#4D4F5C;
 }
 
@@ -115,7 +116,8 @@
 {
 	list-style: none;
 	padding-left: 3%;
-	padding-top: 8.1%;
+	padding-top:4%;
+	padding-bottom: 4%;
 
 }
 
@@ -129,9 +131,11 @@
 {
 	text-decoration: none;
 	color : black;
+
 }
 
-#contenuAssistance #contact ul a
+#faq
 {
-	background-color: black;
+	color:#E8E8EB;
+	background-color: #3C3B53;
 }
