--- a/CSS/style-profil_admin.css
+++ b/CSS/style-profil_admin.css
@@ -14,7 +14,6 @@
 
 .patient{
 	margin-left: 7%;
-	padding-top: 
 
 }
 
@@ -69,7 +68,7 @@
 }
 .prog{
 	background-color: white;
-	margin-left: 50px;
+	margin-left: 7%;
 	width: 50%;
 }
 .prompteur{
