--- a/CSS/patients-style.css
+++ b/CSS/patients-style.css
@@ -4,29 +4,38 @@
 	margin-left: 20%;
 	width: 80%;
 	position : relative;
-	background-color: red;
 }
 
 #main_section a
 {
 	text-decoration : none;
-	color : #3C3B53;
-	font-weight: 800;
+	color : #E8E8EB;
+	font-weight: 550;
 }
 
 #main_section a .patients
 {
 	list-style: none;
 	position : relative;
-	background-color: green;
+	background-color: #3C3B53;
 	width : 35%;
 	float:left;
-	margin-right: 15%;
-	margin-bottom: 4%;
-
+	margin-right: 14.6%;
+	margin-bottom: 4%;	
+	border : solid 1px;
+	border-radius: 30px 30px 30px 30px;
+	overflow : hidden;
 }
 
 #main_section a .patients .info
 {
 	list-style: none;
+	margin-left: 35%;
+}
+
+#main_section a .patients .info li
+{
+	text-align: center;
+	margin-top: 1.5%;
+	margin-bottom: 1.5%;
 }
