--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,9 @@
 * {margin:0; padding:0;font-family: 'Source Sans Pro';} /* Permet de coller la liste sur la gauche de l'écran*/
 
-
+.burger 
+{
+	visibility: hidden;
+}
 body nav
 {
     background-color: #43425D;
@@ -188,3 +191,59 @@ body header h1
 }
 
 
+@media all and (max-width : 680px){
+
+	h1{
+		visibility : hidden;
+	}
+
+	nav{
+		visibility : hidden;
+	}
+
+	#top-bar{
+		
+	}
+	#top-messagerie	
+	{
+		visibility: hidden;
+	}
+	#top-assist
+	{
+		visibility: hidden;
+	}
+	#top-notif
+	{
+		visibility: hidden;
+	}
+	#search-field{
+	margin-left: 0px;
+	position: relative;
+	text-align: left;
+	width: 70%;
+	text-decoration: none;
+	display: inline;
+    float: left;
+	font-size: 1em;
+	color: #747474;	
+	}
+	
+
+
+
+
+
+
+	.burger
+	{
+		visibility: visible;
+		background-color: #3C3B53;
+		width : 20%;
+		height : 20%;
+	}
+	.burger a
+	{
+		color : black;
+		background-color: #3C3B53;
+	}
+}
