--- a/CSS/patients-style.css
+++ b/CSS/patients-style.css
@@ -1,3 +1,8 @@
+body{
+	background-color: #F0F0F7;
+}
+
+
 #main_section 
 {
 	margin-top: 12%;
@@ -39,3 +44,57 @@
 	margin-top: 1.5%;
 	margin-bottom: 1.5%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media all and (max-width : 680px){
+	#main_section{
+	margin-top: 15%;
+	margin-left: 10%;
+	width: 100%;
+	position : absolute;
+
+	}
+
+	#main_section a .patients
+{
+	background-color: #3C3B53;
+	width : 80%;
+	margin-bottom: 5%;	
+	border : solid 1px;
+	border-radius: 20px 20px 20px 20px;
+}
+
+	#main_section a .patients .info
+{
+	list-style: none;
+	margin-left: 37%;
+}
+
+	#main_section a .patients .info li
+{
+	text-align: left;
+	margin-top: 1.5%;
+	margin-bottom: 1.5%;
+}
+
+
+
+
+	}
