--- a/CSS/patients-style.css
+++ b/CSS/patients-style.css
@@ -5,16 +5,23 @@ body{
 
 #main_section 
 {
-	margin-top: 12%;
+	margin-top: 7%;
 	margin-left: 20%;
 	width: 80%;
 	position : relative;
 }
 
+#main_section h2{
+	margin-bottom: 5%;
+	font-weight: 400;
+	color: #43425D;
+	font-size: 1.5em;
+}
+
 #main_section a
 {
 	text-decoration : none;
-	color : #E8E8EB;
+	color : #4D4F5C;
 	font-weight: 550;
 }
 
@@ -22,13 +29,12 @@ body{
 {
 	list-style: none;
 	position : relative;
-	background-color: #3C3B53;
-	width : 35%;
+	background-color: #FFF;
+	width : 40%;
 	float:left;
-	margin-right: 14.6%;
+	margin-right: 5%;
 	margin-bottom: 4%;	
 	border : solid 1px;
-	border-radius: 30px 30px 30px 30px;
 	overflow : hidden;
 }
 
@@ -36,6 +42,7 @@ body{
 {
 	list-style: none;
 	margin-left: 35%;
+	font-size: 0.8em;
 }
 
 #main_section a .patients .info li
@@ -45,6 +52,17 @@ body{
 	margin-bottom: 1.5%;
 }
 
+#main_section a .social_media
+{
+	margin-left: 25%;
+}
+
+#main_section a .social_media i
+{
+	padding-left : 10%;
+	padding-top: 3%;
+	padding-bottom: 3%; 
+}
 
 
 
