--- a/CSS/patients-style.css
+++ b/CSS/patients-style.css
@@ -92,11 +92,10 @@ body{
 
 	#main_section a .patients
 {
-	background-color: #3C3B53;
+	background-color: #FFF;
 	width : 80%;
 	margin-bottom: 5%;	
 	border : solid 1px;
-	border-radius: 20px 20px 20px 20px;
 }
 
 	#main_section a .patients .info
