--- a/CSS/style-faq-admin.css
+++ b/CSS/style-faq-admin.css
@@ -35,12 +35,14 @@ td {
  	color : #3B86FF;
  	margin-left : 8%;
  	text-decoration: underline;
+ 	cursor :pointer;
 
  }
 
 .delete {
  	color : #FF3B3B;
  	text-decoration: underline;
+ 	cursor:pointer;
  }
 
 #contenuAssistance
@@ -189,8 +191,91 @@ td {
 	position : fixed;
 	right : 10%;
 	bottom : 5%;
+	cursor:pointer;
 }
 
-#plus-button:hover
-{
+
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 400px;
+  padding: 10px;
+  background-color: white;
+}
+
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+.form-container .save {
+  margin-top : 20px;
+}
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+} 
+
+.form-popup h4 {
+	color: grey;
+	margin-left: 15px;
+	margin-bottom: 20px;
+
+
+}
+
+#delete-section {
+	display:none;
 }
