--- a/CSS/style-profil_admin.css
+++ b/CSS/style-profil_admin.css
@@ -91,14 +91,15 @@
 	height: 100px;
 }
 h3{
-	color: #C0C0C0;
+	color: black;
 	padding-left: 15px;
-	font-size: 0.9em;
+	font-size: 1.3em;
 
 }
 h4{
 	padding-left: 15px;
 	font-size: 0.9em;
+
 
 }
 h5{
